tests/rosetta/out/Java/100-prisoners.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// 100-prisoners.mochi
import java.util.*;

public class M100Prisoners {
    static List<Integer> shuffle(List<Integer> xs) {
        List<Integer> arr = xs;
        int i = 99;
        while (i > 0) {
            int j = System.currentTimeMillis() % (i + 1);
            List<Integer> tmp = arr.get(i);
            arr.set(i, arr.get(j));
            arr.set(j, tmp);
            i = (int)(i - 1);
        }
        return arr;
    }
    static void doTrials(int trials, int np, String strategy) {
        int pardoned = 0;
        int t = 0;
        while (t < trials) {
            List<Integer> drawers = Arrays.asList();
            int i = 0;
            while (i < 100) {
                drawers.add(i);
                i = (int)(i + 1);
            }
            drawers = shuffle(drawers);
            int p = 0;
            boolean success = true;
            while (p < np) {
                boolean found = false;
                if (Objects.equals(strategy, "optimal")) {
                    int prev = p;
                    int d = 0;
                    while (d < 50) {
                        List<Integer> this = drawers.get(prev);
                        if (Objects.equals(this, p)) {
                            found = true;
                            break;
                        }
                        prev = (int)(this);
                        d = (int)(d + 1);
                    }
                }
                else {
                    List<Boolean> opened = Arrays.asList();
                    int k = 0;
                    while (k < 100) {
                        opened.add(false);
                        k = (int)(k + 1);
                    }
                    int d = 0;
                    while (d < 50) {
                        int n = System.currentTimeMillis() % 100;
                        while (opened.get(n)) {
                            n = (int)(System.currentTimeMillis() % 100);
                        }
                        opened.set(n, true);
                        if (Objects.equals(drawers.get(n), p)) {
                            found = true;
                            break;
                        }
                        d = (int)(d + 1);
                    }
                }
                if (!found) {
                    success = false;
                    break;
                }
                p = (int)(p + 1);
            }
            if (success) {
                pardoned = (int)(pardoned + 1);
            }
            t = (int)(t + 1);
        }
        double rf = (Double.parseDouble(String.valueOf(pardoned))) / (Double.parseDouble(String.valueOf(trials))) * 100.000000;
        System.out.println("  strategy = " + strategy + "  pardoned = " + String.valueOf(pardoned) + " relative frequency = " + String.valueOf(rf) + "%");
    }
    static void main() {
        int trials = 1000;
        for (Integer np : Arrays.asList(10, 100)) {
            System.out.println("Results from " + String.valueOf(trials) + " trials with " + String.valueOf(np) + " prisoners:\n");
            for (String strat : Arrays.asList("random", "optimal")) {
                doTrials(trials, np, strat);
            }
        }
    }
    public static void main(String[] args) {
        main();
    }
}
